--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/font.css">
   
   <title>Frontend Mentor | Interactive pricing component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
-
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="intro">
+      <h1>Simple, traffic-based pricing</h1>
+      <p>for our 30-day trial. No credit card required.</p> 
+    </div>
+    <div class="window">
+      <div class="upper-side">
+        <div class="slider"></div>
+        <div class="person-touched">
+          Pageviews
+        </div>
+        <div class="price">
+          $ /month
+        </div>
+        <div class="subscription">
+          <p>Monthly Billing</p>
+          <div class="btn-switch"></div>
+          <p>Yearly Billing</p>
+          <div id="discount">25% discount</div> 
+        </div>
+      </div>
+      <div class="lower-side">
+        <div class="guarantee">
+          <p>Unlimited websites</p>
+          <p>100% data ownership</p>
+          <p>Email reports</p>
+        </div>
+        <div class="btn">
+          <button>Start my trial</button>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
