change button class to button tag

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="subscription">
           <p>Monthly Billing</p>
-          <div class="btn-switch"></div>
+          <button id="btn-switch"></button>
           <p>Yearly Billing</p>
           <div id="discount">25% discount</div> 
         </div>
@@ -39,9 +39,7 @@
           <p>100% data ownership</p>
           <p>Email reports</p>
         </div>
-        <div class="btn">
-          <button>Start my trial</button>
-        </div>
+        <button id="btn-start">Start my trial</button>
       </div>
     </div>
   </div>
