add missing text in class intro

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="intro">
       <h1>Simple, traffic-based pricing</h1>
-      <p>for our 30-day trial. No credit card required.</p> 
+      <p>Sign-up for our 30-day trial. No credit card required.</p> 
     </div>
     <div class="window">
       <div class="upper-side">
