--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="window">
       <div class="upper-side">
         <div class="slidecontainer">
-          <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+          <input type="range" min="1" max="5" value="3" class="slider" id="myRange">
         </div>
         <div class="person-touched">
           Pageviews
@@ -49,5 +49,6 @@
       </div>
     </div>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
