Add tag strong on $

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Pageviews
         </div>
         <div class="price">
-          $ /month
+          <strong>$</strong> /month
         </div>
         <div class="subscription">
           <p>Monthly Billing</p>
