Add span to adjust pos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Pageviews
         </div>
         <div class="price">
-          <strong>$</strong> /month
+          <strong>$</strong> <span>/ month</span>
         </div>
         <div class="subscription">
           <p>Monthly Billing</p>
