--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/gui.css">
+  <link rel="stylesheet" href="css/media.css">
   
   <title>Frontend Mentor | Interactive pricing component</title>
 
